mon: check is_shutdown() in timer callbacks

introduce a helper class: C_MonContext, and initialize all timer events
using it, to ensure that they do check is_shutdown() before doing their
work.

Fixes: http://tracker.ceph.com/issues/19825
Signed-off-by: Kefu Chai <kchai@redhat.com>
(cherry picked from commit 561cbded0c7e28231b1c7ce18663b8d7d40aad6d)