src/mon/PaxosService.cc
@@ -100,22 +100,15 @@ bool PaxosService::dispatch(MonOpRequestRef op)
 	   * Callback class used to propose the pending value once the proposal_timer
 	   * fires up.
 	   */
-	  class C_Propose : public Context {
-	    PaxosService *ps;
-	  public:
-	    explicit C_Propose(PaxosService *p) : ps(p) { }
-	    void finish(int r) override {
-	      ps->proposal_timer = 0;
+	  proposal_timer = new C_MonContext(mon, [this](int r) {
+	      proposal_timer = 0;
 	      if (r >= 0)
-		ps->propose_pending();
+		propose_pending();
 	      else if (r == -ECANCELED || r == -EAGAIN)
 		return;
 	      else
-		assert(0 == "bad return value for C_Propose");
-	    }
-	  };
-
-	  proposal_timer = new C_Propose(this);
+		assert(0 == "bad return value for proposal_timer");
+	    });
 	  dout(10) << " setting proposal_timer " << proposal_timer << " with delay of " << delay << dendl;
 	  mon->timer.add_event_after(delay, proposal_timer);
 	} else { 
