src/mon/PaxosService.h
@@ -117,8 +117,6 @@ protected:
   /**
    * @}
    */
-  friend class C_Propose;
-  
 
 public:
   /**
